# dprint-plugin-mesonbuild

./: .dprint.json  Cargo.toml  README.md  dprint.json
.github/workflows/: ci.yml
src/: configuration.rs  format_text.rs  grammar.rs  lib.rs  parser.rs  plugin.rs  wasm_plugin.rs
tests/: format_file.rs
tests/data/: config.toml  meson.build
tests/data/0/: config.toml  meson.build
tests/data/1/: config.toml  meson.build
tests/data/2/: config.toml  meson.build
