[package]
name = "dprint-plugin-mesonbuild"
version = "0.1.2"
authors = ["Tice Cosmos <tice@139.com>"]
edition = "2018"
license = "MIT"
description = "Meson build code formatter."
keywords = ["formatter", "meson"]
homepage = "https://github.com/TiceCosmos/dprint-plugin-mesonbuild"
repository = "https://github.com/TiceCosmos/dprint-plugin-mesonbuild"


[lib]
crate-type = ["lib", "cdylib"]

[profile.release]
opt-level = 3
debug = false
lto = true
debug-assertions = false
overflow-checks = false
panic = "abort"


[features]
wasm = ["dprint-core/wasm"]


[dependencies]
dprint-core = "0.43"
serde_json = "1.0"

serde = { version = "*", features = ["derive"] }

[dev-dependencies]
toml = "0.5"
