[package]
name = "dprint-plugin-mesonbuild"
version = "0.1.4"
authors = ["Tice Cosmos <tice@139.com>"]
edition = "2018"
homepage = "https://github.com/TiceCosmos/dprint-plugin-mesonbuild"
keywords = ["formatter", "meson"]
license = "MIT"
repository = "https://github.com/TiceCosmos/dprint-plugin-mesonbuild"
description = "Meson build code formatter."

[lib]
crate-type = ["lib", "cdylib"]

[profile.release]
opt-level = 3
debug = false
lto = true
debug-assertions = false
overflow-checks = false
panic = "abort"

[features]
wasm = ["dprint-core/wasm"]

[dependencies]
dprint-core = { version = "0.64", features = ["formatting"] }
serde_json = { version = "1.0", features = ["preserve_order"] }

anyhow = "*"
serde = { version = "*", features = ["derive"] }

[dev-dependencies]
toml = "0.8"
